ReviewStats, Rating: Expose starCounts from rating and use it for ReviewStats

ReviewStats was calculating the rating progressBars from
reviews only, not from all the total reviews. This
was confusing, since the actual rating value was calculated
from the total ratings.

This exposes the star counts in Rating class and changes
ReviewStats to utilize that instead, so we get accurate
progressbars per rating.

BUG: 513139