libdiscover/ReviewsBackend/Rating.cpp
@@ -101,6 +101,7 @@ Rating::Rating(const QString &packageName, quint64 ratingCount, int data[6])
                / qMax<float>(1, ratingCount))
     , m_ratingPoints(0)
     , m_sortableRating(0)
+    , m_starCounts({data[0], data[1], data[2], data[3], data[4], data[5]})
 {
     int spread[6];
     for (int i = 0; i < 6; ++i) {
@@ -146,6 +147,11 @@ int Rating::ratingPoints() const
 double Rating::sortableRating() const
 {
     return m_sortableRating;
+}
+
+QList<int> Rating::starCounts() const
+{
+    return m_starCounts;
 }
 
 #include "moc_Rating.cpp"
